fix: restore dark-mode blue hover contrast

--- a/packages/doenetml/src/Viewer/renderers/ref.css
+++ b/packages/doenetml/src/Viewer/renderers/ref.css
@@ -12,8 +12,8 @@
     padding: 1px 6px 1px 6px;
 
     &:hover {
-        background-color: var(--lightBlue);
-        color: var(--canvasText);
+        background-color: var(--buttonHoverBlue);
+        color: black;
     }
 
     &:focus {
