--- a/packages/doenetml/src/Viewer/renderers/utils/checkWork.css
+++ b/packages/doenetml/src/Viewer/renderers/utils/checkWork.css
@@ -20,8 +20,8 @@
     cursor: pointer;
 
     &:hover {
-        background-color: var(--lightBlue);
-        color: var(--canvasText);
+        background-color: var(--buttonHoverBlue);
+        color: black;
     }
 }
 
